# clifs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_test.txt  setup.py
.github/workflows/: build_and_publish.yml  ci_workflow.yml  lint.yml  release.yml  test.yml
clifs/: __init__.py  __main__.py  clifs_plugin.py  utils.py  utils_cli.py  utils_fs.py
clifs/plugins/: backup.py  como.py  delete.py  disc_usage.py  edit.py  rename.py  tree.py
clifs/plugins/backup/: backup.py
tests/: conftest.py
tests/common/: test_file_getter.py  test_main.py  test_path_getter.py  utils_testing.py
tests/common/data/: tree_dir_source_1.txt  tree_dir_source_2.txt
tests/test_edit/: test_edit.py
tests/tests_backup/: test_backup.py
tests/tests_como/: test_como.py
tests/tests_delete/: test_delete.py
tests/tests_disc_usage/: test_disc_usage.py
tests/tests_rename/: test_rename.py
tests/tests_tree/: test_tree.py
