[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]

[project]
name = "clifs"
description = "Command line interface for basic file system operations."
authors = [{ email = "don.felice@gmx.net", name = "Felix Segerer" }]
license = { text = "GNU GENERAL PUBLIC LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["colorama>=0.4.3"]
dynamic = ["version"]


[tool.hatch.version]
path = "clifs/VERSION"
pattern = "^(?P<version>.*)$"

[project.scripts]
clifs = "clifs.__main__:main"

[project.entry-points."clifs.plugins"]
tree = "clifs.plugins.tree:DirectoryTree"
du = "clifs.plugins.disc_usage:DiscUsageExplorer"
copy = "clifs.plugins.como:FileCopier"
move = "clifs.plugins.como:FileMover"
del = "clifs.plugins.delete:FileDeleter"
ren = "clifs.plugins.rename:FileRenamer"
backup = "clifs.plugins.backup.backup:FileSaver"

[tool.hatch.envs.default]
dependencies = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "mypy",
    "pyproject-flake8",
    "flake8",
    "pylint",
    "clifs @ file://{root}",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=clifs {args}"
lint = [
    "pflake8 .",
    "black --check .",
    "isort --check .",
    "pylint clifs",
    "mypy clifs",
]


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
branch = true
parallel = true
source = ['clifs']

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.flake8]
max-line-length = 88
count = true

[tool.pylint.'MESSAGES CONTROL']
disable = "C0116, C0114"
